--- a/style.css
+++ b/style.css
@@ -59,8 +59,21 @@ body {
 
 }
 
-.social-media {
-    transition: transform 0.5s;
+.navbar a::after {
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #1743e3;
+    transition: .5s;
+    display: block;
+}
+
+.navbar a:hover::after {
+    width: 100%;
+}
+
+.social-media:hover{
+    transition: 0.5s;
 }
 
 .social-media a {
@@ -348,6 +361,7 @@ body {
     background: #1743e3;
     transform: scale(1.1);
     cursor: pointer;
+    box-shadow:  #1743e3  0px 5px 15px;
 
 }
 .ride-container .box .fa {
